components/kubevirt-pipelines/overlays/ollama-langchain/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama-langchain
  labels:
    openshift.io/cluster-monitoring: "true"
