components/kubevirt-pipelines/overlays/ollama-langchain/ollama-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ollama-langchain
  namespace: ollama-langchain
spec:
  ipFamilies:
    - IPv4
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    vm.kubevirt.io/name: ollama-vm
